# xtor

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: rust.yml
benches/: bench_main_async.rs
benches/_async/: actix.rs  mod.rs  xactor.rs  xtor.rs
examples/: broker.rs  ping.rs  proxy.rs  readme_example.rs  stream_processing.rs  supervisor.rs  timeout.rs  tracing.rs  unblocking.rs
src/: lib.rs
src/actor/: actor.rs  addr.rs  broker.rs  context.rs  message.rs  mod.rs  proxy.rs  runner.rs  supervisor.rs
src/tests/: mod.rs  test_actor.rs  test_broker.rs  test_message.rs  test_proxy.rs  test_supervisor.rs
src/utils/: broker.rs  default_broker.rs  default_supervisor.rs  mod.rs  service.rs
xtor_derive/: Cargo.toml  cargo.toml
xtor_derive/src/: lib.rs
xtor_tracing/: Cargo.toml
xtor_tracing/src/: lib.rs
