[package]
name = "xtor"
version = "0.1.0"
authors = ["lemonhx <lemonhx@lemonhx.tech>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xtor/"
homepage = "https://github.com/lemonhx/xtor"
categories = ["actor", "asynchronous", "network-programming"]
keywords = ["actor", "futures", "async", "xtor", "tokio"]
readme = "README.md"

[dependencies]
tokio = {version = "^1", features = ["full"]}
async-trait = "0.1"
once_cell = "1.5"
anyhow = { version = "1" }
slab = "0.4"
futures = "0.3"
lazy_static = "1"
dashmap = "5.2"
xtor_derive = { version = "0.1", path = "xtor_derive" }

# bench marks and tests
[dev-dependencies]
criterion = {version = "0.3.2", features = ["html_reports"]}
actix = "0.13.0"
async-trait = "0.1.24"
tokio-test = "0.4.2"
xactor = { versino = "0.7.6", default-features = false, features = ["runtime-tokio"] }
rand = "*"

# [[bench]]
# name = "sync_bench"
# harness = false
# path = "benches/bench_main_sync.rs"

[[bench]]
name = "async_bench"
harness = false
path = "benches/bench_main_async.rs"

[workspace]
members = [
    "xtor_derive"
]

[features]
sync = []
