[package]
name = "xtor"
version = "0.9.9"
authors = ["lemonhx <lemonhx@lemonhx.tech>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xtor/"
homepage = "https://github.com/starcoinorg/xtor"
categories = ["actor", "asynchronous", "network-programming"]
keywords = ["actor", "futures", "async", "xtor", "tokio"]
readme = "README.md"
description = "Async Actor framework for Rust which is blazing fast and rock solid."

[dependencies]
tokio = {version = "^1", features = ["full"]}
async-trait = "0.1"
anyhow = { version = "1" }
futures = "0.3"
dashmap = "5.2"
xtor_derive = {version = "0.9", path = "xtor_derive"}
tracing = "0.1"

# bench marks and tests
[dev-dependencies]
criterion = {version = "0.3.2", features = ["html_reports"]}
once_cell = "1.5"
actix = "0.13.0"
async-trait = "0.1.24"
tokio-test = "0.4.2"
xactor = { version = "0.7.6", default-features = false, features = ["runtime-tokio"] }
rand = "0.8"
tracing-subscriber = "0.3"

[[bench]]
name = "async_bench"
harness = false
path = "benches/bench_main_async.rs"

[workspace]
members = [
    "xtor_derive"
]

[features]
sync = []
